Logic for opening external links in a new tab or in an external web browser
https://github.com/bibledit/bibledit/issues/506

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ libbibledit_a_SOURCES = \
 	assets/view.cpp \
 	assets/page.cpp \
 	assets/header.cpp \
+	assets/external.cpp \
 	index/index.cpp \
 	index/listing.cpp \
 	config/globals.cpp \
