The resource viewer scrolls to the same position it had at the last page display
This fixes https://github.com/bibledit/bibledit/issues/518.

--- a/Makefile.am
+++ b/Makefile.am
@@ -292,6 +292,7 @@ libbibledit_a_SOURCES = \
 	resource/user1view.cpp \
 	resource/biblegateway.cpp \
 	resource/studylight.cpp \
+	resource/unload.cpp \
 	jsonxx/jsonxx.cpp \
 	mapping/index.cpp \
 	mapping/map.cpp \
