--- a/Makefile.in
+++ b/Makefile.in
@@ -259,16 +259,17 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	resource/cache.$(OBJEXT) resource/user9edit.$(OBJEXT) \
 	resource/user1edit.$(OBJEXT) resource/user9view.$(OBJEXT) \
 	resource/user1view.$(OBJEXT) resource/biblegateway.$(OBJEXT) \
-	resource/studylight.$(OBJEXT) jsonxx/jsonxx.$(OBJEXT) \
-	mapping/index.$(OBJEXT) mapping/map.$(OBJEXT) \
-	statistics/statistics.$(OBJEXT) changes/change.$(OBJEXT) \
-	changes/changes.$(OBJEXT) changes/logic.$(OBJEXT) \
-	changes/manage.$(OBJEXT) changes/modifications.$(OBJEXT) \
-	changes/statistics.$(OBJEXT) sprint/burndown.$(OBJEXT) \
-	sprint/index.$(OBJEXT) checks/run.$(OBJEXT) \
-	checks/headers.$(OBJEXT) checks/index.$(OBJEXT) \
-	checks/logic.$(OBJEXT) checks/sentences.$(OBJEXT) \
-	checks/settings.$(OBJEXT) checks/settingspatterns.$(OBJEXT) \
+	resource/studylight.$(OBJEXT) resource/unload.$(OBJEXT) \
+	jsonxx/jsonxx.$(OBJEXT) mapping/index.$(OBJEXT) \
+	mapping/map.$(OBJEXT) statistics/statistics.$(OBJEXT) \
+	changes/change.$(OBJEXT) changes/changes.$(OBJEXT) \
+	changes/logic.$(OBJEXT) changes/manage.$(OBJEXT) \
+	changes/modifications.$(OBJEXT) changes/statistics.$(OBJEXT) \
+	sprint/burndown.$(OBJEXT) sprint/index.$(OBJEXT) \
+	checks/run.$(OBJEXT) checks/headers.$(OBJEXT) \
+	checks/index.$(OBJEXT) checks/logic.$(OBJEXT) \
+	checks/sentences.$(OBJEXT) checks/settings.$(OBJEXT) \
+	checks/settingspatterns.$(OBJEXT) \
 	checks/settingssentences.$(OBJEXT) checks/space.$(OBJEXT) \
 	checks/suppress.$(OBJEXT) checks/usfm.$(OBJEXT) \
 	checks/verses.$(OBJEXT) checks/versification.$(OBJEXT) \
@@ -889,6 +890,7 @@ libbibledit_a_SOURCES = \
 	resource/user1view.cpp \
 	resource/biblegateway.cpp \
 	resource/studylight.cpp \
+	resource/unload.cpp \
 	jsonxx/jsonxx.cpp \
 	mapping/index.cpp \
 	mapping/map.cpp \
@@ -2137,6 +2139,8 @@ resource/biblegateway.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
 resource/studylight.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
+resource/unload.$(OBJEXT): resource/$(am__dirstamp) \
+	resource/$(DEPDIR)/$(am__dirstamp)
 jsonxx/$(am__dirstamp):
 	@$(MKDIR_P) jsonxx
 	@: > jsonxx/$(am__dirstamp)
@@ -3273,6 +3277,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/select.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/studylight.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/sword.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/unload.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/user1edit.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/user1view.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@resource/$(DEPDIR)/user9edit.Po@am__quote@
